@@ -39,6 +39,7 @@ version ? (????-??-??):
     and 'install' core actions, and many other changes (alec)
   - added index on column 'dt' in table 'stats' - only in database structure
     initialization scripts (alec)
+  - don't "blend" customers without nodes on Customers List (alec)
 
 version 1.9.1 Jumar (2006-02-13):
 
